2007-03-01  Stefan Jahn  <stefan@lkcc.org>

	* spsolver.cpp: Fixed memory leak.

	* equation.cpp: Fixed memory leak when application is evaluated
	twice or more times.

	* check_netlist.cpp: Fixed a subcircuit expansion bug occurring
	when at least 2 subcircuits are expanded at the top of the circuit
	list.

2007-02-27  Stefan Jahn  <stefan@lkcc.org>

	* ucs.cpp (main): Running the new netlist_destroy_env() function.

	* check_netlist.cpp (netlist_destroy_env): New function which
	can be used to delete the top-level root environment(s).

	* environment.cpp: Deleting children in destructor.  Deleting
	results of variable references.  Bugfix: Passing definition list
	when running the solver.

2007-02-23  Stefan Jahn  <stefan@lkcc.org>

	* input.cpp: Fixed a bug regarding substrates which are now
	also local to subcircuit environments.

	* equation.cpp: Emit appropriate error message if it was
	impossible to determine the type of an assignment equation.
	If undefined dependencies are found in the equation checker
	process; now trying to resolve that dependencies in the
	component properties of the netlist.
	Fixed a segfault bug when trying to detect variable chain of
	an assigment which is actually not cyclic itself but involves
	a variable which is cyclic.

	* equation.h (class checker): Add a netlist entries to the
	equation checker.

	* environment.h (class environment): Add a netlist entries to
	an environment.

2007-02-22  Stefan Jahn  <stefan@lkcc.org>

	* environment.cpp: Fixed a bug which was due to the fact that
	different environments based on the same subcircuit share the
	same equation checker and solver.

2007-02-21  Stefan Jahn  <stefan@lkcc.org>

	* environment.cpp: Copy variable content if necessary.

	* check_netlist.cpp: Don't come across root components twice when
	expanding subcircuits.

2007-02-20  Stefan Jahn  <stefan@lkcc.org>

	* variable.h (class variable): Allowing variables to references
	as well.
