@@ -1,0 +1,3 @@
+*.dsw
+*.dsp
+*.tgz
