@@ -1,0 +1,178 @@
+/* config.h.  Generated by configure.  */
+/* config.h.in.  Generated from configure.ac by autoheader.  */
+
+
+/* __BEGIN_DECLS should be used at the beginning of your declarations,
+   so that C++ compilers don't mangle their names.  Use __END_DECLS at
+   the end of C declarations. */
+/* #undef __BEGIN_DECLS */
+/* #undef __END_DECLS */
+#ifdef __cplusplus
+# define __BEGIN_DECLS extern "C" {
+# define __END_DECLS }
+#else
+# define __BEGIN_DECLS
+# define __END_DECLS
+#endif
+
+#ifndef _GNU_SOURCE
+#define _GNU_SOURCE 1
+#endif
+
+
+/* Define if debug output should be supported. */
+/* #undef DEBUG */
+
+/* Define to 1 if you have the `acos' function. */
+#define HAVE_ACOS 1
+
+/* Define to 1 if you have the `asin' function. */
+#define HAVE_ASIN 1
+
+/* Define to 1 if you have the `atan' function. */
+#define HAVE_ATAN 1
+
+/* Define to 1 if you have the `atan2' function. */
+#define HAVE_ATAN2 1
+
+/* Define to 1 if you have the `cos' function. */
+#define HAVE_COS 1
+
+/* Define to 1 if you have the `cosh' function. */
+#define HAVE_COSH 1
+
+/* Define to 1 if you have the `erf' function. */
+/* #undef HAVE_ERF */
+
+/* Define to 1 if you have the `erfc' function. */
+/* #undef HAVE_ERFC */
+
+/* Define to 1 if you have the `exp' function. */
+#define HAVE_EXP 1
+
+/* Define to 1 if you have the `fabs' function. */
+#define HAVE_FABS 1
+
+/* Define to 1 if you have the `floor' function. */
+#define HAVE_FLOOR 1
+
+/* Define to 1 if you have the <ieeefp.h> header file. */
+/* #undef HAVE_IEEEFP_H */
+
+/* Define to 1 if you have the <inttypes.h> header file. */
+/* #undef HAVE_INTTYPES_H */
+
+/* Define to 1 if you have the `jn' function. */
+#define HAVE_JN 1
+
+/* Define to 1 if you have the `m' library (-lm). */
+#define HAVE_LIBM 1
+
+/* Define to 1 if you have the `log' function. */
+#define HAVE_LOG 1
+
+/* Define to 1 if you have the `log10' function. */
+#define HAVE_LOG10 1
+
+/* Define to 1 if you have the <memory.h> header file. */
+#define HAVE_MEMORY_H 1
+
+/* Define to 1 if you have the `modf' function. */
+#define HAVE_MODF 1
+
+/* Define to 1 if you have the `pow' function. */
+#define HAVE_POW 1
+
+/* Define to 1 if you have the `round' function. */
+/* #undef HAVE_ROUND */
+
+/* Define to 1 if you have the `sin' function. */
+#define HAVE_SIN 1
+
+/* Define to 1 if you have the `sinh' function. */
+#define HAVE_SINH 1
+
+/* Define to 1 if you have the `sqrt' function. */
+#define HAVE_SQRT 1
+
+/* Define to 1 if you have the <stddef.h> header file. */
+#define HAVE_STDDEF_H 1
+
+/* Define to 1 if you have the <stdint.h> header file. */
+#define HAVE_STDINT_H 1
+
+/* Define to 1 if you have the <stdlib.h> header file. */
+#define HAVE_STDLIB_H 1
+
+/* Define to 1 if you have the `strchr' function. */
+#define HAVE_STRCHR 1
+
+/* Define to 1 if you have the `strdup' function. */
+#define HAVE_STRDUP 1
+
+/* Define to 1 if you have the `strerror' function. */
+#define HAVE_STRERROR 1
+
+/* Define to 1 if you have the <strings.h> header file. */
+/* #undef HAVE_STRINGS_H */
+
+/* Define to 1 if you have the <string.h> header file. */
+#define HAVE_STRING_H 1
+
+/* Define to 1 if you have the <sys/stat.h> header file. */
+#define HAVE_SYS_STAT_H 1
+
+/* Define to 1 if you have the <sys/types.h> header file. */
+#define HAVE_SYS_TYPES_H 1
+
+/* Define to 1 if you have the `tan' function. */
+#define HAVE_TAN 1
+
+/* Define to 1 if you have the `tanh' function. */
+#define HAVE_TANH 1
+
+/* Define to 1 if you have the <unistd.h> header file. */
+/* #undef HAVE_UNISTD_H */
+
+/* Define to 1 if you have the `yn' function. */
+#define HAVE_YN 1
+
+/* Define if debug code should be suppressed. */
+/* #define NDEBUG 1 */
+
+/* The size of the double representation. */
+#define NR_DOUBLE_SIZE 8
+
+/* Define to the address where bug reports for this package should be sent. */
+#define PACKAGE_BUGREPORT "qucs-bugs@lists.sourceforge.net"
+
+/* Define to the full name of this package. */
+#define PACKAGE_NAME "qucs-core"
+
+/* Define to the full name and version of this package. */
+#define PACKAGE_STRING "qucs-core 0.0.11"
+
+/* Define to the one symbol short name of this package. */
+#define PACKAGE_TARNAME "qucs-core"
+
+/* Define to the version of this package. */
+#define PACKAGE_VERSION "0.0.11"
+
+/* The size of a `long double', as computed by sizeof. */
+/* #undef SIZEOF_LONG_DOUBLE */
+
+/* Define to 1 if you have the ANSI C header files. */
+#define STDC_HEADERS 1
+
+/* Define to 1 if `lex' declares `yytext' as a `char *' by default, not a
+   `char[]'. */
+/* #undef YYTEXT_POINTER */
+
+/* Define to empty if `const' does not conform to ANSI C. */
+/* #undef const */
+
+/* The global type of double representation. */
+#define nr_double_t double
+
+/* Define to `unsigned' if <sys/types.h> does not define. */
+/* #undef size_t */
