@@ -1,0 +1,10 @@
+@echo off
+move libcomponent.dsp src\components
+move libmicrostrip.dsp src\components\microstrip
+move qucsconv.dsp src\converter
+move libdevices.dsp src\components\devices
+move libdigital.dsp src\components\digital
+move libverilog.dsp src\components\verilog
+move libqucsator.dsp src
+move qucsator.dsp src
+move config.h.qucscore config.h
