@@ -32,7 +32,7 @@ Version 0.0.11
  * allow equation variables in component properties
  * equations in subcircuits
  * subcircuit parameters: from equations or sweep parameters
- * twisted pair and 4-port transmission line implementation
+ * twisted pair and 4-terminal transmission line implementation
  * bondwire model implementation
  * new Verilog-AMS device models: HICUM L2 v2.1 and FBH HBT
  * using ADMS XML scripts for Verilog-AMS device models
