@@ -1,3 +1,10 @@
+2007-03-03  Stefan Jahn  <stefan@lkcc.org>
+
+	* property.cpp: Deleting vector variable, fixing memory leak.
+
+	* check_netlist.cpp: Fixed memory leak for value lists in
+	component properties.
+
 2007-03-01  Stefan Jahn  <stefan@lkcc.org>
 
 	* spsolver.cpp: Fixed memory leak.
